--- a/_posts/2021-07-23-자료구조-1-이중연결리스트.md
+++ b/_posts/2021-07-23-자료구조-1-이중연결리스트.md
@@ -168,6 +168,8 @@ if __name__ == '__main__':
     d.print_list()
 
     print('첫 노드 삭제 후:\t', end='') #(pear => orange => grape)
+    #더미노드 2개를 생성했다는 것을 기억하자.
+    d.delete(d.head.next)
     d.print_list()
 
     print('첫 노드 삭제 후:\t', end='') #(orange => grape)
@@ -181,6 +183,7 @@ if __name__ == '__main__':
     print('첫 노드 삭제 후:\t', end='') #(리스트가 비었습니다!)
     d.delete(d.head.next)
     d.print_list()
+    
 
 {% endhighlight %}
 
