--- a/_posts/2021-08-02-백준-10828번-스택.md
+++ b/_posts/2021-08-02-백준-10828번-스택.md
@@ -41,34 +41,34 @@ top: 스택의 가장 위에 있는 정수를 출력한다.<br>
 
 <strong>Example Case:</strong>
 
-Input: 
-14
-push 1
-push 2
-top
-size
-empty
-pop
-pop
-pop
-size
-empty
-pop
-push 3
-empty
+Input:<br>
+14<br>
+push 1<br>
+push 2<br>
+top<br>
+size<br>
+empty<br>
+pop<br>
+pop<br>
+pop<br>
+size<br>
+empty<br>
+pop<br>
+push 3<br>
+empty<br>
 top
 
-Output:
-2
-2
-0
-2
-1
--1
-0
-1
--1
-0
+Output:<br>
+2<br>
+2<br>
+0<br>
+2<br>
+1<br>
+-1<br>
+0<br>
+1<br>
+-1<br>
+0<br>
 3
 
 
