--- a/_posts/2021-08-03-백준-9012번-괄호.md
+++ b/_posts/2021-08-03-백준-9012번-괄호.md
@@ -40,32 +40,32 @@ comments: true
 
 <strong>Example Case:</strong>
 
-Input case 1: 
-6
-(())())
-(((()())()
-(()())((()))
-((()()(()))(((())))()
-()()()()(()()())()
+Input case 1:<br> 
+6<br>
+(())())<br>
+(((()())()<br>
+(()())((()))<br>
+((()()(()))(((())))()<br>
+()()()()(()()())()<br>
 (()((())()(
 
-Output case 1:
-NO
-NO
-YES
-NO
-YES
+Output case 1:<br>
+NO<br>
+NO<br>
+YES<br>
+NO<br>
+YES<br>
 NO
 
-Input case 2:
-3
-((
-))
+Input case 2:<br>
+3<br>
+((<br>
+))<br>
 ())(()
 
-Output case 2:
-NO
-NO
+Output case 2:<br>
+NO<br>
+NO<br>
 NO
 
 
