--- a/_posts/2021-08-04-자료구조-2-큐.md
+++ b/_posts/2021-08-04-자료구조-2-큐.md
@@ -59,7 +59,7 @@ def add(item): #삽입 연산
         front = new_node #새 노드 객체가 front(rear 삽입)
     else: #빈 큐가 아닐떄)
         rear.next = new_node #맨 마지막 rear 자리에 삽입
-    rear = new_node #rear = 새로 추가한 노드(FIFO,First In First Out)
+    rear = new_node #rear = 새로 추가한 노드(FIFO,First In First Out), "rear 재지정"
     size += 1
 
 def remove(): #삭제 연산
