--- a/_posts/2021-08-10-자료구조-2-원형 큐.md
+++ b/_posts/2021-08-10-자료구조-2-원형 큐.md
@@ -11,13 +11,21 @@ comments: true
 <strong> "원형 큐"(Circular Queue)는 선형 큐의 문제점을 보완하기 위한 자료구조 이다. </strong>
 
 선형 큐(Queue)의 단점으론, <br>
+첫 번째로,<br>
 큐에 데이터가 꽉차면 데이터를 더 추가할 수 없다는점.<br>
 (전체 사이즈를 늘리고 원소 재복사 가능,-시간복잡도 증가 <br>
 python 리스트 사용시 이에 해당 = 동적배열할당 문제) <br>
+두 번째로,<br>
 dequeue를 계속하게 되면 앞쪽의 공간낭비 <br>
 (정해진 크기의 큐 안에서 front가 뒤로 밀려 앞 공간이 남게됨, <br>
 이로 인해 모든 원소를 앞쪽으로 다시 당겨와야함 == 속도 느림) <br>
-이 단점들을 보완한 자료구조가 원형 큐 이다.
+간단하게 예시를 들어보자,<br>
+rear => 4 3 2 1 <= front<br>
+라는 선형 큐가 존재할 때,<br>
+dequeue를 진행하게되면<br>
+rear => 4 3 2  <= front<br>
+상태가 되는데, 이 상태에선 enqueue를 진행 할 수 없다.<br>
+이 단점들을 보완한 자료구조가 원형 큐 이다.<br>
 
 <img src = "/assets/images/circularqueue.png">
 
@@ -29,12 +37,28 @@ front-rear 두개의 포인터가 원소를 가리키며<br>
 선형 큐와 같이 rear에서 enqueue / front에서 dequeue가 발생하며,<br>
 동적 배열을 쓰지 않아 메모리공간 낭비가 발생 하지 않는다.<br>
 =앞쪽에 공간이 남아있다면 원형구조를 활용해 앞쪽으로 추가가능.<br>
-또한 재배열 할 필요도 없고,모든 연산은 O(1)시간으로 빠르다.
+또한 재배열 할 필요도 없고,모든 연산은 O(1)시간으로 빠르다.<br>
 
 다만,<br>
-크기가 정해져있어 연산 시 원형 큐의 크기를 미리 파악하자.
+크기가 정해져있어 연산 시 원형 큐의 크기를 미리 파악하자.<br>
+또한,이 원형 큐도 단점이 존재하는데<br>
+
+<img src = "/assets/images/cqdisadv1.png">
+
+>
+enqueue시 칸을 비워 놓지 않고 모든 칸을 다 이용하면서<br>
+rear,front 포인터를 이동 시킬시<br>
+큐가 꽉찬 상태와 빈 큐인 상태를 구별하지 못한다.<br>
+(rear,front 포인터가 같은 원소를 가리키는 경우가<br>
+남은 원소 1개를 가리키는 경우인지/dequeue를 하다가 만난 경우인지)<br>
+따라서,한 칸을 비워두고 enqueue를 하는 방식으로<br>
+rear 포인터가 빈 칸을 활용하는 방법으로 개선 할 수 있다.
+>
+
+<img src = "/assets/images/cqadv1.png">
 
 python으로 작성한 코드이다.
+
 {% highlight js linenos %}
 
 class CircularQueue():
