--- a/_posts/2021-08-13-백준-10866번-덱.md
+++ b/_posts/2021-08-13-백준-10866번-덱.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 백준 11866번 "요세푸스 문제 0"
+title: 백준 10866번 "덱"
 date: 2021-08-13 17:00 +0800
 last_modified_at: 2020-07-22 +0800
 tags: [백준,문제풀이]
