--- a/_posts/2021-08-16-백준-1874번-스택수열.md
+++ b/_posts/2021-08-16-백준-1874번-스택수열.md
@@ -8,7 +8,45 @@ toc:  false
 comments: true
 ---
 
-[백준 1874번 "스택 수열"](https://www.acmicpc.net/problem/1874)
+[백준 1874번 "스택 수열"](https://www.acmicpc.net/problem/1874)<br>
+
+<strong>Question:</strong>
+
+스택 (stack)은 기본적인 자료구조 중 하나로, <br>
+컴퓨터 프로그램을 작성할 때 자주 이용되는 개념이다. <br>
+스택은 자료를 넣는 (push) 입구와 자료를 뽑는 (pop) 입구가 같아 <br>
+제일 나중에 들어간 자료가 제일 먼저 나오는 (LIFO, Last in First out) <br>
+특성을 가지고 있다.<br>
+
+1부터 n까지의 수를 스택에 넣었다가 뽑아 늘어놓음으로써, <br>
+하나의 수열을 만들 수 있다. <br>
+이때, <br>
+스택에 push하는 순서는 반드시 오름차순을 지키도록 한다고 하자. <br>
+임의의 수열이 주어졌을 때 스택을 이용해 그 수열을 만들 수 있는지 없는지,<br> 있다면 어떤 순서로 push와 pop 연산을 수행해야 하는지를 알아낼 수 있다. <br>
+이를 계산하는 프로그램을 작성하라.<br>
+
+<strong>Input:</strong>
+
+
+입력된 수열을 만들기 위해 필요한 연산을 한 줄에 한 개씩 출력한다. <br>
+push연산은 +로, pop 연산은 -로 표현하도록 한다. <br>
+불가능한 경우 NO를 출력한다.<br>
+
+
+<strong>Output:</strong>
+
+
+입력된 수열을 만들기 위해 필요한 연산을 한 줄에 한 개씩 출력한다. <br>
+push연산은 +로, pop 연산은 -로 표현하도록 한다. <br>
+불가능한 경우 NO를 출력한다.<br>
+
+
+<strong>Restriction:</strong>
+
+
+시간제한:<br>
+2 초 
+
 
 <strong>Example Case:</strong>
 Input case 1: <br>
