--- a/_posts/2021-08-25-백준-1929번-소수 구하기.md
+++ b/_posts/2021-08-25-백준-1929번-소수 구하기.md
@@ -75,7 +75,7 @@ Output case 1: <br>
 
 에라토스테네스의 체 구현하기<br>
 >
-Q. 1 부터 N까지의 수 중 소수를 구하고 싶다!<br>
+Q. 1 부터 N까지의 수 중 소수를 구하고 싶다.<br>
 1.1 부터 N까지의 수를 가상의 배열에 둔다<br>
 2.1은 제외하고,2부터 2의 배수에 관해 수를 지워나간다.<br>
 3.그 다음 수인 3에도 똑같이 적용한다.<br>
