--- a/_posts/2021-08-25-백준-1929번-소수 구하기.md
+++ b/_posts/2021-08-25-백준-1929번-소수 구하기.md
@@ -70,7 +70,7 @@ Output case 1: <br>
 2부터 N-1까지의 수로 나누어 지는지<br>
 모든 경우의 수를 확인하는 법이 있다.<br>
 
-그러나 위 방법의 경우 O(N)으로 시간이 많이 걸린다.<br>
+그러나 위 방법의 경우 O(N^2)으로 시간이 많이 걸린다.<br>
 에라토스테네스의 체 같은경우 O(Nlog(logN))의 시간으로 가장 빠르다.<br>
 
 에라토스테네스의 체 구현하기<br>
