--- a/_posts/2021-11-12-백준-1463번-1로 만들기.md
+++ b/_posts/2021-11-12-백준-1463번-1로 만들기.md
@@ -16,9 +16,9 @@ comments: true
 정수 X에 사용할 수 있는 연산은 다음과 같이 세 가지 이다.  
 
 <ol>
-<li>X가 3으로 나누어 떨어지면, 3으로 나눈다.  
-<li>X가 2로 나누어 떨어지면, 2로 나눈다.  
-<li>1을 뺀다.  
+<li>X가 3으로 나누어 떨어지면, 3으로 나눈다.</li>   
+<li>X가 2로 나누어 떨어지면, 2로 나눈다.</li>   
+<li>1을 뺀다.</li>  
 </ol>  
 
 정수 N이 주어졌을 때,  
