--- a/_posts/2021-11-12-백준-1463번-1로 만들기.md
+++ b/_posts/2021-11-12-백준-1463번-1로 만들기.md
@@ -113,13 +113,13 @@ N은 3이 되고 3으로 나눴을 때 나머지가 0이다.
 dp[i/2],dp[i/3],dp[i-1] 처럼,  
 dp의 특징인 작은 경우의 해답을 재이용하는 모습을 보여주고 있다.  
 
-ex) N = 4
-4 -> 2 -> 1
-이면, 결국 N = 4 일 때는 N = 2 일 때의 연산의 최솟값을 이용한다.  
+ex) N = 4  
+4 -> 2 -> 1 이면,  
+결국 N = 4 일 때는 N = 2 일 때의 연산의 최솟값을 이용한다.  
 
-ex 2) N = 10
-10 -> 9 -> 3 -> 1
-이면, 결국 N = 10 일 때는 N = 9 일 때의 연산의 최솟값을 이용한다.  
+ex 2) N = 10  
+10 -> 9 -> 3 -> 1 이면,  
+결국 N = 10 일 때는 N = 9 일 때의 연산의 최솟값을 이용한다.  
 
 
 {% highlight js linenos %}
