--- a/_posts/2021-11-12-백준-1463번-1로 만들기.md
+++ b/_posts/2021-11-12-백준-1463번-1로 만들기.md
@@ -8,7 +8,7 @@ toc:  false
 comments: true
 ---
 
-[백준 1463번 "체스판 다시 칠하기"](https://www.acmicpc.net/problem/1463)<br>
+[백준 1463번 "1로 만들기"](https://www.acmicpc.net/problem/1463)<br>
 
 
 <strong>Question:</strong>  
