--- a/_posts/2021-12-24-백준-2606번-바이러스.md
+++ b/_posts/2021-12-24-백준-2606번-바이러스.md
@@ -12,35 +12,35 @@ comments: true
 
 <strong>Question:</strong>  
 
-신종 바이러스인 웜 바이러스는 네트워크를 통해 전파된다. 
-한 컴퓨터가 웜 바이러스에 걸리면  
-그 컴퓨터와 네트워크 상에서 연결되어 있는 모든 컴퓨터는 웜 바이러스에 걸리게 된다.  
+신종 바이러스인 웜 바이러스는 네트워크를 통해 전파된다. <br>
+한 컴퓨터가 웜 바이러스에 걸리면  <br>
+그 컴퓨터와 네트워크 상에서 연결되어 있는 모든 컴퓨터는 웜 바이러스에 걸리게 된다.  <br>
 
-예를 들어 7대의 컴퓨터가  
-<그림 1>과 같이 네트워크 상에서 연결되어 있다고 하자.  
-1번 컴퓨터가 웜 바이러스에 걸리면  
-웜 바이러스는 2번과 5번 컴퓨터를 거쳐 3번과 6번 컴퓨터까지 전파되어  
-2, 3, 5, 6 네 대의 컴퓨터는 웜 바이러스에 걸리게 된다.  
-하지만 4번과 7번 컴퓨터는 1번 컴퓨터와 네트워크상에서 연결되어 있지 않기 때문에 영향을 받지 않는다.
+예를 들어 7대의 컴퓨터가  <br>
+<그림 1>과 같이 네트워크 상에서 연결되어 있다고 하자.  <br>
+1번 컴퓨터가 웜 바이러스에 걸리면  <br>
+웜 바이러스는 2번과 5번 컴퓨터를 거쳐 3번과 6번 컴퓨터까지 전파되어  <br>
+2, 3, 5, 6 네 대의 컴퓨터는 웜 바이러스에 걸리게 된다.  <br>
+하지만 4번과 7번 컴퓨터는 1번 컴퓨터와 네트워크상에서 연결되어 있지 않기 때문에 영향을 받지 않는다.<br>
 
-어느 날 1번 컴퓨터가 웜 바이러스에 걸렸다.  
-컴퓨터의 수와 네트워크 상에서 서로 연결되어 있는 정보가 주어질 때,  
-1번 컴퓨터를 통해 웜 바이러스에 걸리게 되는 컴퓨터의 수를 출력하는 프로그램을 작성하시오.
+어느 날 1번 컴퓨터가 웜 바이러스에 걸렸다.  <br>
+컴퓨터의 수와 네트워크 상에서 서로 연결되어 있는 정보가 주어질 때,  <br>
+1번 컴퓨터를 통해 웜 바이러스에 걸리게 되는 컴퓨터의 수를 출력하는 프로그램을 작성하시오.<br>
 
 
 <strong>Input:</strong>  
 
 
-첫째 줄에는 컴퓨터의 수가 주어진다.  
-컴퓨터의 수는 100 이하이고 각 컴퓨터에는 1번 부터 차례대로 번호가 매겨진다.  
-둘째 줄에는 네트워크 상에서 직접 연결되어 있는 컴퓨터 쌍의 수가 주어진다.  
-이어서 그 수만큼 한 줄에 한 쌍씩 네트워크 상에서 직접 연결되어 있는 컴퓨터의 번호 쌍이 주어진다.
+첫째 줄에는 컴퓨터의 수가 주어진다.  <br>
+컴퓨터의 수는 100 이하이고 각 컴퓨터에는 1번 부터 차례대로 번호가 매겨진다.  <br>
+둘째 줄에는 네트워크 상에서 직접 연결되어 있는 컴퓨터 쌍의 수가 주어진다.  <br>
+이어서 그 수만큼 한 줄에 한 쌍씩 네트워크 상에서 직접 연결되어 있는 컴퓨터의 번호 쌍이 주어진다.<br>
 
 <strong>Output:</strong>  
 
 
-1번 컴퓨터가 웜 바이러스에 걸렸을 때,  
-1번 컴퓨터를 통해 웜 바이러스에 걸리게 되는 컴퓨터의 수를 첫째 줄에 출력한다.
+1번 컴퓨터가 웜 바이러스에 걸렸을 때,  <br>
+1번 컴퓨터를 통해 웜 바이러스에 걸리게 되는 컴퓨터의 수를 첫째 줄에 출력한다.<br>
 
 
 <strong>Restriction:</strong>  
@@ -70,27 +70,27 @@ Output case 1: <br>
 {% endhighlight %}  
 
 <mark>풀이 과정:</mark>  
-이 문제는 BFS를 활용한 기초적인 그래프 탐색 관련 문제이다.  
+이 문제는 BFS를 활용한 기초적인 그래프 탐색 관련 문제이다.  <br>
 
-BFS(Breadth-First Search) 그래프 탐색 방법은,  
-어떠한 임의의 노드에 인접한 노드를 우선적으로 방문하는 그래프 탐색방법이다.  
+BFS(Breadth-First Search) 그래프 탐색 방법은,  <br>
+어떠한 임의의 노드에 인접한 노드를 우선적으로 방문하는 그래프 탐색방법이다.  <br>
 
-자료구조중  
-"<font style = "color:blue">큐(참고 : https://crispy-down.github.io/2021/08/04/%EC%9E%90%EB%A3%8C%EA%B5%AC%EC%A1%B0-2-%ED%81%90/)</font>"를   
-활용하여 탐색을 진행하는데,  
-한 정점으로 부터 시작하여  
+자료구조중  <br>
+"<strong>큐</strong>"를 활용하여 탐색을 진행하는데, <br>
+(참고 : https://crispy-down.github.io/2021/08/04/%EC%9E%90%EB%A3%8C%EA%B5%AC%EC%A1%B0-2-%ED%81%90/) <br>
+한 정점으로 부터 시작하여  <br>
 <strong> "정점이 인접해 있고,해당 정점을 방문하지 않은 상태" 라면, </strong>  
-큐에 직접 해당 정점들을 enqueue한다.    
-그 후,  
-FIFO(First In First Out,선입선출)의 성질을 가진 큐에서 정점을 하나씩 dequeue 하며,    
-dequeue한 정점에 위에 똑같은 조건을 가진 정점을 다시 enqueue 시킨다.    
-이러한 과정을 반복하여  
-연결되어있는 모든 정점에 대해(큐가 empty()가 될 때까지) 탐색을 진행한다.  
+큐에 직접 해당 정점들을 enqueue한다.    <br>
+그 후,  <br>
+FIFO(First In First Out,선입선출)의 성질을 가진 큐에서 정점을 하나씩 dequeue 하며,    <br>
+dequeue한 정점에 위에 똑같은 조건을 가진 정점을 다시 enqueue 시킨다.    <br>
+이러한 과정을 반복하여  <br>
+연결되어있는 모든 정점에 대해(큐가 empty()가 될 때까지) 탐색을 진행한다.  <br>
 
-이 문제를 푸는 방법은,  
-BFS를 구현 한 뒤    
-해당 문제 조건에 맞게 정점 '1'부터 BFS를 진행한 뒤,  
-방문한 정점이 저장된 visited 배열을 확인해보자.
+이 문제를 푸는 방법은,  <br>
+BFS를 구현 한 뒤    <br>
+해당 문제 조건에 맞게 정점 '1'부터 BFS를 진행한 뒤,  <br>
+방문한 정점이 저장된 visited 배열을 확인해보자.<br>
 
 
 {% highlight js linenos %}
