--- a/_posts/2021-12-24-백준-2606번-바이러스.md
+++ b/_posts/2021-12-24-백준-2606번-바이러스.md
@@ -76,8 +76,7 @@ BFS(Breadth-First Search) 그래프 탐색 방법은,  <br>
 어떠한 임의의 노드에 인접한 노드를 우선적으로 방문하는 그래프 탐색방법이다.  <br>
 
 자료구조중  <br>
-"<strong>큐</strong>"를 활용하여 탐색을 진행하는데, <br>
-(참고 : https://crispy-down.github.io/2021/08/04/%EC%9E%90%EB%A3%8C%EA%B5%AC%EC%A1%B0-2-%ED%81%90/) <br>
+"<strong>큐</strong>"를 활용하여 탐색을 진행하는데, <br> 
 한 정점으로 부터 시작하여  <br>
 <strong> "정점이 인접해 있고,해당 정점을 방문하지 않은 상태" 라면, </strong>  
 큐에 직접 해당 정점들을 enqueue한다.    <br>
@@ -92,6 +91,8 @@ BFS를 구현 한 뒤    <br>
 해당 문제 조건에 맞게 정점 '1'부터 BFS를 진행한 뒤,  <br>
 방문한 정점이 저장된 visited 배열을 확인해보자.<br>
 
+자료구조 큐 <br>
+(참고 : https://crispy-down.github.io/2021/08/04/%EC%9E%90%EB%A3%8C%EA%B5%AC%EC%A1%B0-2-%ED%81%90/) <br>
 
 {% highlight js linenos %}
 #include <iostream>
