--- a/_posts/2021-12-25-백준-1991번-트리순회.md
+++ b/_posts/2021-12-25-백준-1991번-트리순회.md
@@ -20,10 +20,11 @@ comments: true
 
 예를 들어 위와 같은 이진 트리가 입력되면, <br>
 <ul>
-<li> 전위 순회한 결과 : ABDCEFG // (루트) (왼쪽 자식) (오른쪽 자식)
-<li> 중위 순회한 결과 : DBAECFG // (왼쪽 자식) (루트) (오른쪽 자식)
-<li> 후위 순회한 결과 : DBEGFCA // (왼쪽 자식) (오른쪽 자식) (루트)
+<li> 전위 순회한 결과 : ABDCEFG // (루트) (왼쪽 자식) (오른쪽 자식) </li>
+<li> 중위 순회한 결과 : DBAECFG // (왼쪽 자식) (루트) (오른쪽 자식) </li>
+<li> 후위 순회한 결과 : DBEGFCA // (왼쪽 자식) (오른쪽 자식) (루트) </li>
 <br>
+
 가 된다. <br>
 
 <strong>Input:</strong>  
