--- a/_posts/2021-12-25-백준-1991번-트리순회.md
+++ b/_posts/2021-12-25-백준-1991번-트리순회.md
@@ -88,9 +88,15 @@ DBEGFCA
 
 트리를 순회하는 방식에는 <br>
 <ol>
-<li>전위 순회[preorder] (NLR)
-<li>중위 순회[inorder] (LNR)
-<li>후위 순회[postorder] (LRN)
+<li>
+전위 순회[preorder] (NLR)
+</li>
+<li>
+중위 순회[inorder] (LNR)
+</li>
+<li>
+후위 순회[postorder] (LRN)
+</li>
 </ol>
 이 존재한다. <br>
 위에는 등장하지 않지만, 트리의 레벨별로 순회하는 레벨 순회도 존재한다(BFS). <br>
