--- a/_posts/2022-02-14-백준-7662번-이중 우선순위 큐.md
+++ b/_posts/2022-02-14-백준-7662번-이중 우선순위 큐.md
@@ -49,7 +49,6 @@ Q에 저장될 모든 정수는 32-비트 정수이다. <br>
 
 <strong>Output:</strong>  
 
-
 출력은 표준출력을 사용한다. <br>
 각 테스트 데이터에 대해, 모든 연산을 처리한 후 <br>
 Q에 남아 있는 값 중 최댓값과 최솟값을 출력하라. <br>
@@ -107,16 +106,13 @@ EMPTY
 기존 우선순위 큐의 연산에 부가적으로 <br>
 최대힙과 최소힙의 기능을 동시에 요구하는 문제이다. <br>
 <p>
-
 기능 자체를 구현하기에는 어렵지 않지만,  <br>
 필자는 최대힙-최소힙을 둘 다 구현하는 방식을 사용하였다.<br>
 <p>
-
 다만 어려웠던 점은, <br>
 최솟값과 최댓값을 삭제하는 연산을 진행시 <br>
 어느 한쪽의 큐 데이터를 삭제 시 다른 한쪽의 큐에서도 삭제가 이루어져야한다.<br>
 <p>
-
 이를 위해서,  <br>
 데이터를 입력 받을때 bool 배열을 따로 선언하여<br>
 해당 데이터를 삽입 시 True,<br>
@@ -125,22 +121,19 @@ EMPTY
 두가지의 시점에 대해서 <br>
 우선순위 큐 안에 있는 False 데이터들을 전부 pop 한다.<br>
 <p>
-
 이렇게 하면,<br>
 최대힙에서 최대값을 삭제 하였을 때,<br>
 최소힙의 해당 데이터는 후에라도 삭제가 된다.<br>
 <p>
-
 또한,<br>
 C++ STL 우선순위 큐 선언을 기억해놓자.<br>
-{% highlight js %}
+{% highlight js linenos %}
 priority_queue<int> pq; //최대 힙
 priority_queue<int,vector<int>,greater<int>> pQ; //최소힙
 {% endhighlight %}  
 <p>
-
 아래는 해당 문제의 코드이다.<br>
-{% highlight js %}
+{% highlight js linenos %}
 #include <iostream>
 #include <map>
 #include <queue>
